--- a/index.html
+++ b/index.html
@@ -7,8 +7,54 @@
   <title>Sign-up Form</title>
 </head>
 <body>
-  <div class="hello-world">
-    <h1>Hello world!</h1>
+  <div class="container">
+    <div class="image">
+      <div class="logo">
+        <img src="./assets/odin-lined.png" alt="The Odin Project Logo">
+        <h1>ODIN</h1>
+      </div>
+    </div>
+    <div class="content">
+      <p>
+        This is not a real online service! You know you need something like This
+        in your life to help you realize your deepest dreams.
+        <br>
+        Sign up <i>now</i> to get started.
+        <br><br>
+        You <i>know</i> you want to.
+      </p>
+      <div class="form">
+        <form action="#" method="post">
+           <legend>Let's do this!</legend>
+           <div>
+            <label for="first_name">FIRST NAME</label>
+            <input type="text" id="first_name" name="first_name">
+          </div>
+           <div>
+            <label for="last_name">LAST NAME</label>
+            <input type="text" id="last_name" name="last_name">
+          </div>
+           <div>
+            <label for="email">EMAIL</label>
+            <input type="email" id="email" name="email">
+          </div>
+           <div>
+            <label for="phone_number">PHONE NUMBER</label>
+            <input type="number" id="phone_number" name="phone_number">
+          </div>
+           <div>
+            <label for="password">PASSWORD</label>
+            <input type="password" id="password" name="password">
+          </div>
+           <div>
+            <label for="confirm_password">CONFIRM PASSWORD</label>
+            <input type="password" id="confirm_password" name="confirm_password">
+          </div>
+        </form>
+      </div>
+      <button>Create Account</button>
+      <p>Already have an account? <a href="#">Log in</a></p>
+    </div>
   </div>
 </body>
 </html>
