--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
   <title>Sign-up Form</title>
 </head>
+
 <body>
   <div class="container">
     <div class="image">
@@ -14,47 +16,53 @@
         <h1>ODIN</h1>
       </div>
     </div>
-    <div class="content">
-      <p>
-        This is not a real online service! You know you need something like This
-        in your life to help you realize your deepest dreams.
-        <br>
-        Sign up <i>now</i> to get started.
-        <br><br>
-        You <i>know</i> you want to.
-      </p>
+
+    <div class="content-container">
+        <div class="content content-top">
+          <p>
+            This is not a real online service! You know you need something like this
+            in your life to help you realize your deepest dreams.
+            <br>
+            Sign up <i>now</i> to get started.
+            <br><br>
+            You <i>know</i> you want to.
+          </p>
+        </div>
       <div class="form">
-        <form action="#" method="post">
-           <legend>Let's do this!</legend>
-           <div>
-            <label for="first_name">FIRST NAME</label>
-            <input type="text" id="first_name" name="first_name">
-          </div>
-           <div>
-            <label for="last_name">LAST NAME</label>
-            <input type="text" id="last_name" name="last_name">
-          </div>
-           <div>
-            <label for="email">EMAIL</label>
-            <input type="email" id="email" name="email">
-          </div>
-           <div>
-            <label for="phone_number">PHONE NUMBER</label>
-            <input type="number" id="phone_number" name="phone_number">
-          </div>
-           <div>
-            <label for="password">PASSWORD</label>
-            <input type="password" id="password" name="password">
-          </div>
-           <div>
-            <label for="confirm_password">CONFIRM PASSWORD</label>
-            <input type="password" id="confirm_password" name="confirm_password">
-          </div>
+        <form action="" method="post" id="myForm">
+          <legend>Let's do this!</legend>
+          <section>
+            <div>
+              <label for="first_name">FIRST NAME</label>
+              <input type="text" id="first_name" name="first_name" required>
+            </div>
+            <div>
+              <label for="last_name">LAST NAME</label>
+              <input type="text" id="last_name" name="last_name" required>
+            </div>
+            <div>
+              <label for="email">EMAIL</label>
+              <input type="email" id="email" name="email" required>
+            </div>
+            <div>
+              <label for="phone_number">PHONE NUMBER</label>
+              <input type="tel" id="phone_number" name="phone_number" required>
+            </div>
+            <div>
+              <label for="password">PASSWORD</label>
+              <input class="error" type="password" id="password" name="password" required>
+            </div>
+            <div>
+              <label for="confirm_password">CONFIRM PASSWORD</label>
+              <input class="error" type="password" id="confirm_password" name="confirm_password" required>
+            </div>
+          </section>
         </form>
       </div>
-      <button>Create Account</button>
-      <p>Already have an account? <a href="#">Log in</a></p>
+        <button form="myForm">Create Account</button>
+        <p id="sign-up">Already have an account? <a href="#">Log in</a></p>
     </div>
   </div>
 </body>
+
 </html>
